--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -7,7 +7,6 @@
     <title>Stylist assistant. Hello, bootstrap</title>
     <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.css">
     <link type="text/css" href="static/bower_components/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet"/>
-
 </head>
 <body>
 <style>
@@ -33,26 +32,12 @@
     }
 </style>
 <div class="container">
-    <div class="row" style="">
+    <div class="row">
         <div id="canvas" class="col-sm-7" style="height: 700px; background-color: white"></div>
-        <div class="col-sm-5" style="height: 700px;background-color: #eee">
-            <!--<ul class="nav nav-pills">-->
-            <!--<li role="presentation" id="active"><a href="#">Male</a></li>-->
-            <!--<li role="presentation"><a href="#">Female</a></li>-->
-            <!--<li role="presentation"><a href="#">Colors</a></li>-->
-            <!--<li role="presentation"><a href="#">Budget</a></li>-->
-            <!--</ul>-->
-            <!--<ul class="nav nav-tabs">-->
-            <!--<li role="presentation" class="active"><a href="#">1</a></li>-->
-            <!--<li role="presentation"><a href="#">2</a></li>-->
-            <!--<li role="presentation"><a href="#">3</a></li>-->
-            <!--<li role="presentation"><a href="#">4</a></li>-->
-            <!--<li role="presentation"><a href="#">5</a></li>-->
-            <!--</ul>-->
+        <div id="right-side" class="col-sm-5" style="height: 700px;background-color: #eee">
+            <!--menu was here and mooved to bottom-->
             <form><input id="screen" type="button" value="screen"></form>
-
             <div id="issues" style="position: relative; border-color: black">
-
                 <img id="top01" src="static/dresses/top01.jpg" style="left: 0; top: 10px;">
                 <img id="down01" src="static/dresses/down01.jpg" style="left: 122px; top: 10px">
                 <img id="shoes01" src="static/dresses/shoes01.jpg" style="left: 244px; top: 10px">
@@ -60,76 +45,91 @@
                 <!--<img id="top02" src="dresses/top02.jpg" style="left: 0; top: 140px">-->
                 <!--<img id="stop01" src="dresses/stop01.jpg" style="left: 122px; top: 140px">-->
                 <img id="acc01" src="static/dresses/acc01.jpg" style="left: 244px; top: 140px">
-                <!--</div>-->
-            </div>
-        </div>
+            </div><!--end issues div-->
+        </div><!--end right-side -->
     </div>
-    <script src="static/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="static/bower_components/jquery-ui/jquery-ui.min.js"></script>
-    <script src="static/html2canvas.js"></script>
-    <script>
-        var modeDrag = true;
-        var issuesSelector = null;
+</div>
 
-        //    $('#issues').click(function (e) {
-        //        issuesSelector = $(e.target);
-        ////        issuesSelector.hide();
-        ////        issuesSelector.draggable('destroy');
-        ////        issuesSelector.resizable();
-        //
-        //        if (modeDrag) {
-        ////            alert(e+'resizableMode - turned on');
-        //            modeDrag = false;
-        //            issuesSelector.draggable('destroy');
-        //            issuesSelector.resizable();
-        //        }
-        //        else {
-        ////            alert('modeDrag - turned on');
-        //            modeDrag = true;
-        //            issuesSelector.resizable('destroy');
-        //            issuesSelector.draggable();
-        //        }
-        //    });
-        //$('.issues img').draggable();
-        function addIssue(e) {
-            //alert(e.target + " This will be displayed only once");
-            $(this).clone().draggable().appendTo($('#canvas'));
+<script src="static/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="static/bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script src="static/html2canvas.js"></script>
+<script>
+    var modeDrag = true;
+    var issuesSelector;
+
+    function dragOrResize(e) {
+        console.log("issue clicked");
+        issuesSelector = $(e.target);
+        //issuesSelector.hide();
+        //        issuesSelector.draggable('destroy');
+        //        issuesSelector.resizable();
+
+        if (modeDrag) {
+            console.log('resizableMode - turned on');
+            modeDrag = false;
+            issuesSelector.draggable('destroy');
+            issuesSelector.resizable();
         }
+        else {
+            console.log('modeDrag - turned on');
+            modeDrag = true;
+            issuesSelector.resizable('destroy');
+            issuesSelector.draggable();
+        }
+    }
+    //$('.issues img').draggable();
+    function addIssue(e) {
+        var newitem = $(this).clone();
+        newitem.appendTo($('#canvas'));
+        newitem.draggable();
+        newitem.dblclick(dragOrResize);
+        //$(this).clone().draggable().appendTo($('#canvas'));
+    }
 
-        $('#top01').one("click", addIssue);
-        $('#down01').one("click", addIssue);
-        $('#shoes01').one("click", addIssue);
-        $('#acc01').one("click", addIssue);
+    $('#top01').one("click", addIssue);
+    $('#down01').one("click", addIssue);
+    $('#shoes01').one("click", addIssue);
+    $('#acc01').one("click", addIssue);
 
-        //            function () {
-        //        alert("This will be displayed only once.")
-        //    });
+    //            function () {
+    //        alert("This will be displayed only once.")
+    //    });
 
-        //    $('#top02').draggable();
-        //    $('#stop01').draggable();
-        //    $('#down01').draggable();
-        //    $('#shoes01').draggable();
-        //    $('#acc01').draggable();
+    //    $('#top02').draggable();
+    //    $('#stop01').draggable();
+    //    $('#down01').draggable();
+    //    $('#shoes01').draggable();
+    //    $('#acc01').draggable();
 
-        //http://stackoverflow.com/questions/13198131/how-to-save-a-html5-canvas-as-image-on-a-server
-
-        $('#screen').click(function () {
-            alert("screen");
-            html2canvas(document.getElementById("canvas"), {
-                onrendered: function (canvas) {
-                    document.body.appendChild(canvas);
-                    var dataURL = canvas.toDataURL();
-                    console.log(dataURL);
-                    $.post('upload', {img: dataURL});
-                    //save2server(canvas);
-                }
-            });
+    //http://stackoverflow.com/questions/13198131/how-to-save-a-html5-canvas-as-image-on-a-server
+    $('#screen').click(function () {
+        alert("screen");
+        html2canvas(document.getElementById("canvas"), {
+            onrendered: function (canvas) {
+                document.body.appendChild(canvas);
+                var dataURL = canvas.toDataURL();
+                console.log(dataURL);
+                $.post('upload', {img: dataURL});
+                //save2server(canvas);
+            }
         });
+    });
+</script>
 
-
-
-    </script>
 </body>
 </html>
 
+<!--<ul class="nav nav-pills">-->
+<!--<li role="presentation" id="active"><a href="#">Male</a></li>-->
+<!--<li role="presentation"><a href="#">Female</a></li>-->
+<!--<li role="presentation"><a href="#">Colors</a></li>-->
+<!--<li role="presentation"><a href="#">Budget</a></li>-->
+<!--</ul>-->
+<!--<ul class="nav nav-tabs">-->
+<!--<li role="presentation" class="active"><a href="#">1</a></li>-->
+<!--<li role="presentation"><a href="#">2</a></li>-->
+<!--<li role="presentation"><a href="#">3</a></li>-->
+<!--<li role="presentation"><a href="#">4</a></li>-->
+<!--<li role="presentation"><a href="#">5</a></li>-->
+<!--</ul>-->
