--- a/templates/index.template.html
+++ b/templates/index.template.html
@@ -35,8 +35,8 @@
         margin: auto;
         border: 1px solid black;
         background-color: white;
-        width: 200px;
-        height: 400px;
+        width: 300px;
+        height: 350px;
     }
 </style>
 <div class="container">
@@ -101,6 +101,7 @@
     $('#down01').one("click", addIssue);
     $('#shoes01').one("click", addIssue);
     $('#acc01').one("click", addIssue);
+    $('#canvas').resizable();
 
     //            function () {
     //        alert("This will be displayed only once.")
