--- a/private/templates/index.template.html
+++ b/private/templates/index.template.html
@@ -10,10 +10,12 @@
 </head>
 <body>
 <style>
-    #issues img {
-        position: absolute;
+    .tools-item {
         width: 120px;
         height: 120px;
+        display: inline-block;
+        background-color: white;
+        border: 1px black solid;
     }
 
     li {
@@ -48,14 +50,8 @@
         <div id="right-side" class="col-sm-5" style="height: 100vh;background-color: #eee">
             <!--menu was here and mooved to bottom-->
             <form><input id="screen" type="button" value="screen"></form>
-            <div id="issues" style="position: relative; border-color: black">
-                <img id="top01" src="static/dresses/top01.jpg" style="left: 0; top: 10px;">
-                <img id="down01" src="static/dresses/down01.jpg" style="left: 122px; top: 10px">
-                <img id="shoes01" src="static/dresses/shoes01.jpg" style="left: 244px; top: 10px">
-
-                <!--<img id="top02" src="dresses/top02.jpg" style="left: 0; top: 140px">-->
-                <!--<img id="stop01" src="dresses/stop01.jpg" style="left: 122px; top: 140px">-->
-                <img id="acc01" src="static/dresses/acc01.jpg" style="left: 244px; top: 140px">
+            <div id="tools" style="border-color: black">
+                <!--<img id="top01" src="static/dresses/top01.jpg">-->
             </div><!--end issues div-->
         </div><!--end right-side -->
     </div>
@@ -70,8 +66,8 @@
 <script>
     var db = new loki('shopeiro');
     var shopeiro;
-    var tools_filter={};
-    const tools_max= 4;
+    var tools_filter = {};
+    const tools_max = 20;
 
     function initDB() {
         shopeiro = db.addCollection('shopeiro');
@@ -80,10 +76,27 @@
         }
     }
 
+
     console.log('db=' + db);
     initDB();
-    var tools=shopeiro.chain().find(tools_filter).limit(tools_max).data();
-    for (let i=0;i<tools.length;i++){console.log(tools[i])};
+    var tools = shopeiro.chain().find(tools_filter).limit(tools_max).data();
+    for (let i = 0; i < tools.length; i++) {
+        console.log(tools[i])
+    }
+    function toolsItem(id,src){
+        rez='<img id="'+id+'"class="tools-item" src="'+
+                src+'">';
+        return rez;
+    }
+
+    function updateToolsFilter() {
+        for (let i = 0; i < tools.length; i++) {
+            $('#tools').append(
+                    toolsItem(tools[i]._id,tools[i].pictures[0]));
+        }
+    }
+
+    updateToolsFilter();
 
     var modeDrag = true;
     var issuesSelector;
@@ -150,6 +163,13 @@
 
 </body>
 </html>
+
+<!--<img id="down01" src="static/dresses/down01.jpg" style="left: 122px; top: 10px">-->
+<!--<img id="shoes01" src="static/dresses/shoes01.jpg" style="left: 244px; top: 10px">-->
+
+<!--&lt;!&ndash;<img id="top02" src="dresses/top02.jpg" style="left: 0; top: 140px">&ndash;&gt;-->
+<!--&lt;!&ndash;<img id="stop01" src="dresses/stop01.jpg" style="left: 122px; top: 140px">&ndash;&gt;-->
+<!--<img id="acc01" src="static/dresses/acc01.jpg" style="left: 244px; top: 140px">-->
 
 <!--<ul class="nav nav-pills">-->
 <!--<li role="presentation" id="active"><a href="#">Male</a></li>-->
