fixed after crash

--- a/private/templates/index.template.html
+++ b/private/templates/index.template.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <style>
+
     .tools-item {
         width: 120px;
         height: 120px;
@@ -60,7 +61,7 @@
 <script src="static/bower_components/lokijs/src/lokijs.js"></script>
 <script src="static/minibase200.js"></script>
 <script src="static/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!--<script src="static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
 <script src="static/bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script src="static/html2canvas.js"></script>
 <script>
